<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.servicio.UpdateServicioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_fecha"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_descripcion"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_kilometraje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_kilometraje"
            android:inputType="number" />


        <Button
            android:id="@+id/bt_delete_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_delete_servicio" />

        <Button
            android:id="@+id/bt_update_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_update_servicio" />



    </LinearLayout>

</ScrollView>