<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.servicio.UpdateServicioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_nombre"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_marca"
            android:inputType="text" />


        <Button
            android:id="@+id/bt_delete_mecanico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_delete_auto" />

        <Button
            android:id="@+id/bt_update_mecanico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_update_auto" />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/msg_imagen"
            android:scaleType="centerInside"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/backgrounds/scenic" />

    </LinearLayout>

</ScrollView>