<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.mecanico.UpdateMecanicoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_descripcion"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_Celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_celular"
            android:inputType="number" />


        <Button
            android:id="@+id/bt_delete_mecanico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_delete_mecanico" />

        <Button
            android:id="@+id/bt_update_mecanico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_update_mecanico" />



    </LinearLayout>

</ScrollView>